--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
             <div class="row" id="detailsRow">
 
-                <div class="bg-loading d-none d-flex justify-content-center align-items-center position-absolute top-0 bottom-0 start-0 end-0">
+                <div class="bg-loading d-flex justify-content-center align-items-center position-absolute top-0 bottom-0 start-0 end-0">
     
                 <span class="loader"></span>
     
