--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
      
 
     </main>
-    <section class="details position-fixed top-0 bottom-0 start-0 end-0 text-white d-none ">
+    <section class="details position-fixed top-0 bottom-0 start-0 end-0 text-white d-none overflow-auto">
        
         <div class="container">
             <div class="details-header d-flex align-items-center justify-content-between">
