--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <!--loading-->
 
                     <div
-                        class="bg-loading  d-flex justify-content-center align-items-center position-absolute top-0 bottom-0 start-0 end-0">
+                        class="bg-loading  d-none justify-content-center align-items-center position-absolute top-0 bottom-0 start-0 end-0">
 
                         <span class="loader"></span>
 
@@ -102,7 +102,7 @@
         <div class="container">
             <div class="details-header d-flex align-items-center justify-content-between">
                 <h1 class="h3 text-center py-4 ">Details Game</h1>
-                <button class="btn-close btn-close-white" id="close"></button>
+                <button class="btn-close btn-close-white" id="close" ></button>
             </div>
 
             <div class="row g-4 " id="detailsRow">
@@ -124,7 +124,7 @@
 
     <script src="js files/jquery-3.7.1.min.js"></script>
     <script src="js files/bootstrap.bundle.min.js"></script>
-    <script src="js files/index.js"></script>
+    <script type="module" src="js files/index.js"></script>
 </body>
 
 </html>
